language-server/src/tests/snapshots/gleam_language_server__tests__completion__importable_module_function_from_deep_module.snap
---
source: language-server/src/tests/completion.rs
expression: "\n"
---
|


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [1:0-1:0]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
dep.wobble
  kind:   Function
  detail: fn() -> Nil
  sort:   5_dep.wobble
  desc:   a/b/dep
  edits:
    [1:0-1:0]: "dep.wobble"
    [0:0-0:0]: "import a/b/dep\n\n"
