language-server/src/tests/snapshots/gleam_language_server__tests__completion__importable_module_function_with_existing_imports.snap
---
source: language-server/src/tests/completion.rs
expression: "\n//// Some module comments\n// Some other whitespace\n\nimport dep2\n"
---
|
//// Some module comments
// Some other whitespace

import dep2


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [1:0-1:0]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
dep.wobble
  kind:   Function
  detail: fn() -> Nil
  sort:   5_dep.wobble
  desc:   dep
  edits:
    [1:0-1:0]: "dep.wobble"
    [0:0-0:0]: "import dep\n\n"
dep2.wobble
  kind:   Function
  detail: fn() -> Nil
  sort:   3_dep2.wobble
  desc:   app
  edits:
    [1:0-1:0]: "dep2.wobble"
