language-server/src/tests/snapshots/gleam_language_server__tests__completion__imported_public_record.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport dep\n"
---
|
import dep


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [1:0-1:0]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
dep.Box
  kind:   Constructor
  detail: fn(Int) -> Box
  sort:   3_dep.Box
  desc:   app
  edits:
    [1:0-1:0]: "dep.Box"
