language-server/src/tests/snapshots/gleam_language_server__tests__completion__imported_unqualified_public_enum.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport dep.{Left}\n"
---
|
import dep.{Left}


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [1:0-1:0]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Left
  kind:   EnumMember
  detail: Direction
  sort:   3_Left
  desc:   app
  edits:
    [1:0-1:0]: "Left"
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
dep.Left
  kind:   EnumMember
  detail: Direction
  sort:   3_dep.Left
  desc:   app
  edits:
    [1:0-1:0]: "dep.Left"
dep.Right
  kind:   EnumMember
  detail: Direction
  sort:   3_dep.Right
  desc:   app
  edits:
    [1:0-1:0]: "dep.Right"
